06-k8s-complex/stephen's/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-cluster-ip-service
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: server-cluster-ip-service
            port: 
              number: 5000
